[package]
name = "native-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-nostd-sha256 = "0.1.3"
pinocchio = "0.5.0"
five8_const = "0.1.3"
solana-program = "2.0.14"
bytemuck = { version = "1.18.0", features = ["derive", "const_zeroed"]}

[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "2.0.14"